# data-checker

./: .gitignore  pyproject.toml
src/data_checker/: core.py
