[project]
name = "data-checker"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
[project.entry-points."uniinfo.plugins"]
check = "data_checker.core:run_check"
[dependency-groups]
dev = [
    "uniinfo-editor @ git+https://github.com/CollegesChat/uniinfo-editor"
]