[project]
name = "data-checker"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
#dependencies = [
#    "click-repl>=0.3.0",
#]
[project.entry-points."uniinfo.plugins"]
check = "data_checker.core:run_check"
[dependency-groups]
dev = [
    "uniinfo-editor @ git+https://github.com/CollegesChat/uniinfo-editor"
]

# [tool.uv.sources]
# uniinfo-editor = { path = "../uniinfo-editor" }
